加固商城交易链路并完善工程质量
- 加固购物车、下单、评价、支付消费及用户数据访问一致性
- 修复菜单种子、管理端类型与富文本安全问题并补充测试
- 完善 SQL 迁移、Cloud 开发编排、锁文件和项目文档